infrastructure/manifests/simple-webapp-nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-webapp-nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-webapp-nodejs
  template:
    metadata:
      labels:
        app: simple-webapp-nodejs
    spec:
      containers:
      - name: simple-webapp-nodejs
        image: gehadgkamel/simple-webapp-nodejs:302b90f8711be296883fa74e15ce1b1a3a25b08d
        ports:
        - containerPort: 8000
