infrastructure/manifests/simple-webapp-nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: simple-webapp-nodejs
  name: simple-webapp-nodejs
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: simple-webapp-nodejs
  type: ClusterIP
status:
  loadBalancer: {}
