infrastructure/manifests/simple-webapp-nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-webapp-nodejs
  annotations:
    kubernetes.io/ingress.class: "nginx"
    service.beta.kubernetes.io/aws-load-balancer-type: "classic"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-healthy-threshold: "2"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-unhealthy-threshold: "2"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-interval: "10"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-timeout: "5"
spec:
  ingressClassName: nginx
  rules:
  - host: aeefb304cd61e49989c0040617400b1a-1484436399.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-webapp-nodejs
            port:
              number: 80
status:
  loadBalancer: {}
